--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native-web": "~0.19.6",
     "@expo/webpack-config": "^19.0.0",
     "typescript": "^5.1.3",
-    "@types/react": "~18.2.14"
+    "@types/react": "~18.2.14",
+    "@expo/vector-icons": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
