--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@expo/webpack-config": "^19.0.0",
     "typescript": "^5.1.3",
     "@types/react": "~18.2.14",
-    "@expo/vector-icons": "^13.0.0"
+    "@expo/vector-icons": "^13.0.0",
+    "expo-image-picker": "~14.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
