--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "typescript": "^5.1.3",
     "@types/react": "~18.2.14",
     "@expo/vector-icons": "^13.0.0",
-    "expo-image-picker": "~14.3.2"
+    "expo-image-picker": "~14.3.2",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
