--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,8 @@
 {
-  "compilerOptions": {},
-  "extends": "expo/tsconfig.base"
+  "extends": "expo/tsconfig.base",
+  "compilerOptions": {
+    "strict": true
+  },
+  "include": ["components", "scorebridge-ts-submodule", "App.tsx"],
+  "exclude": ["node_modules/**/*", "babel.config.js"]
 }
