--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^19.0.0",
     "@types/react": "~18.2.14",
+    "dom-to-image": "^2.6.0",
     "expo": "~49.0.8",
     "expo-image-picker": "~14.3.2",
     "expo-media-library": "~15.4.1",
