--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^19.0.0",
+    "@types/dom-to-image": "^2.6.0",
     "@types/react": "~18.2.14",
     "dom-to-image": "^2.6.0",
     "expo": "~49.0.8",
