--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/react-native": "^0.72.2",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
+    "eas-cli": "^5.1.0",
     "eslint": "^8.48.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
