--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "graphql": "^15.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^13.2.2",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-web": "~0.19.6",
