--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-i18next": "^13.2.2",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "^3.4.2",
     "react-native-web": "~0.19.6",
     "typescript": "^5.1.3"
   },
