--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
     "graphql": "^15.8.0",
+    "i18next": "^23.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^13.2.2",
