--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-web": "~0.19.6",
     "typescript": "^5.1.3",
-    "react-native-reanimated": "~3.3.0"
+    "react-native-reanimated": "~3.3.0",
+    "@react-native-async-storage/async-storage": "1.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
