--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-web": "~0.19.6",
     "typescript": "^5.1.3",
     "react-native-reanimated": "~3.3.0",
-    "@react-native-async-storage/async-storage": "1.18.2"
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/netinfo": "9.3.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
