--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@aws-amplify/ui-react": "^5.3.0",
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/netinfo": "9.3.10",
     "@types/react": "~18.2.14",
     "aws-amplify": "^5.3.10",
     "expo": "~49.0.8",
@@ -33,11 +35,10 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-web": "~0.19.6",
-    "typescript": "^5.1.3",
     "react-native-reanimated": "~3.3.0",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-community/netinfo": "9.3.10"
+    "react-native-web": "~0.19.6",
+    "react-redux": "^8.1.2",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
