--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.2",
+    "redux-thunk": "^2.4.2",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
