--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/netinfo": "9.3.10",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/react": "~18.2.14",
     "aws-amplify": "^5.3.10",
     "expo": "~49.0.8",
