--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-localization": "^14.3.0",
     "expo-status-bar": "~1.6.0",
     "graphql": "^15.8.0",
+    "graphql-tag": "^2.12.6",
     "i18n-js": "^4.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
