feat: SCOR-105 online icon for device project
but in order to test it, I need to set up eas build to get an apk to install, since internet connection interruption also messes with the expo go route and I cannot tell whether the subscription re-initialization will work or not

--- a/app.json
+++ b/app.json
@@ -28,6 +28,11 @@
     },
     "plugins": [
       "expo-localization"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "446c6f00-35d3-4803-8db5-da84e8991bf5"
+      }
+    }
   }
 }
