--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
+    "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.2",
     "redux-persist": "^6.0.0",
