--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@react-native-community/netinfo": "9.3.10",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react": "~18.2.14",
+    "amazon-cognito-identity-js": "^6.3.8",
     "aws-amplify": "^5.3.10",
     "expo": "~49.0.8",
+    "expo-dev-client": "~2.4.12",
     "expo-localization": "~14.3.0",
     "expo-status-bar": "~1.6.0",
     "graphql": "^15.8.0",
@@ -52,7 +54,6 @@
     "@types/react-native": "^0.72.2",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
-    "eas-cli": "^5.1.0",
     "eslint": "^8.48.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
