--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
       "react-app/jest"
     ]
   },
+  "engines": {
+    "node": "18.13.0",
+    "npm": "9.7.1"
+  },
   "dependencies": {
-    "@aws-amplify/ui-react": "^5.3.0",
+    "@aws-amplify/react-native": "^1.0.9",
+    "@aws-amplify/ui-react": "^6.0.7",
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
@@ -27,13 +32,12 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react": "~18.2.14",
     "amazon-cognito-identity-js": "^6.3.8",
-    "aws-amplify": "^5.3.10",
-    "expo": "~49.0.8",
+    "aws-amplify": "^6.0.9",
+    "expo": "^49.0.21",
     "expo-dev-client": "~2.4.12",
     "expo-localization": "~14.3.0",
     "expo-status-bar": "~1.6.0",
     "graphql": "^15.8.0",
-    "graphql-tag": "^2.12.6",
     "i18n-js": "^4.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -46,9 +50,15 @@
     "react-redux": "^8.1.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "react-native-get-random-values": "~1.9.0"
   },
   "devDependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.478.0",
+    "@aws-sdk/client-dynamodb": "^3.478.0",
+    "@aws-sdk/client-secrets-manager": "^3.478.0",
+    "@aws-sdk/client-sqs": "^3.478.0",
+    "@aws-sdk/credential-providers": "^3.478.0",
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@types/react-native": "^0.72.2",
@@ -57,6 +67,7 @@
     "eslint": "^8.48.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-native": "^4.1.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "prettier": "^3.0.3"
   },
