--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "android": "expo start --android",
+    "dev": "APP_VARIANT=dev expo start",
     "format": "prettier --write .",
     "ios": "expo start --ios",
     "lint": "eslint . --report-unused-disable-directives --max-warnings 0 --fix",
